@@ -123,21 +123,76 @@ public class TestDistributedShell {
   }
 
   @Test(timeout=30000)
-  public void testDSShellWithNoArgs() throws Exception {
-
-    String[] args = {};
+  public void testDSShellWithInvalidArgs() throws Exception {
+    Client client = new Client(new Configuration(yarnCluster.getConfig()));
 
     LOG.info("Initializing DS Client with no args");
-    Client client = new Client(new Configuration(yarnCluster.getConfig()));
-    boolean exceptionThrown = false;
     try {
-      boolean initSuccess = client.init(args);
-      Assert.assertTrue(initSuccess);
+      client.init(new String[]{});
+      Assert.fail("Exception is expected");
+    } catch (IllegalArgumentException e) {
+      Assert.assertTrue("The throw exception is not expected",
+          e.getMessage().contains("No args"));
     }
-    catch (IllegalArgumentException e) {
-      exceptionThrown = true;
+
+    LOG.info("Initializing DS Client with no jar file");
+    try {
+      String[] args = {
+          "--num_containers",
+          "2",
+          "--shell_command",
+          Shell.WINDOWS ? "dir" : "ls",
+          "--master_memory",
+          "512",
+          "--container_memory",
+          "128"
+      };
+      client.init(args);
+      Assert.fail("Exception is expected");
+    } catch (IllegalArgumentException e) {
+      Assert.assertTrue("The throw exception is not expected",
+          e.getMessage().contains("No jar"));
     }
-    Assert.assertTrue(exceptionThrown);
+
+    LOG.info("Initializing DS Client with no shell command");
+    try {
+      String[] args = {
+          "--jar",
+          APPMASTER_JAR,
+          "--num_containers",
+          "2",
+          "--master_memory",
+          "512",
+          "--container_memory",
+          "128"
+      };
+      client.init(args);
+      Assert.fail("Exception is expected");
+    } catch (IllegalArgumentException e) {
+      Assert.assertTrue("The throw exception is not expected",
+          e.getMessage().contains("No shell command"));
+    }
+
+    LOG.info("Initializing DS Client with invalid no. of containers");
+    try {
+      String[] args = {
+          "--jar",
+          APPMASTER_JAR,
+          "--num_containers",
+          "-1",
+          "--shell_command",
+          Shell.WINDOWS ? "dir" : "ls",
+          "--master_memory",
+          "512",
+          "--container_memory",
+          "128"
+      };
+      client.init(args);
+      Assert.fail("Exception is expected");
+    } catch (IllegalArgumentException e) {
+      Assert.assertTrue("The throw exception is not expected",
+          e.getMessage().contains("Invalid no. of containers"));
+    }
   }
 
 }
